--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -262,9 +262,9 @@ body {;
 #main {
     /* Testing responsive stuff */
     overflow: hidden;
-    width: 100%;
+    width: 60%;
     min-height: 100%;
-    height: 100%;
+    height: 600px;
     position: relative;
 }
 
