--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -259,21 +259,23 @@ body {;
     margin: 40px auto;
 }
 
+#main {
+    /* Testing responsive stuff */
+    overflow: hidden;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    position: relative;
+}
+
 #header > div,
 #main > div {
     clear: both;
     margin: 0 auto;
     overflow: auto;
     width: 100%;
+    height: 100%;   
 }
-
-#main {
-    /* Testing responsive stuff */
-    overflow: hidden;
-    width: 300px;
-    height: 600px;
-}
-
 .node {
     border: solid 1px white;
     line-height: 0.95;
