--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -263,8 +263,8 @@ body {;
     /* Testing responsive stuff */
     overflow: hidden;
     width: 100%;
-    min-height: 100%;
     height: 100%;
+    min-height: 60em;
     position: relative;
 }
 
