--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -304,3 +304,23 @@ body {;
     overflow: hidden;     
 }
 
+.subnode {
+    position: relative;
+    left: 3px;
+    top: 3px;
+}
+
+.subnode div {
+    padding: 6px 4%;
+}
+
+.subnode span {
+    font-size: 0.875em;
+    line-height: 1;
+    display: inline-block;
+    width: 100%;
+    padding:  0.625em;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;     
+}
