Testing fonts and colour scheme; positioning boxes.

--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -223,6 +223,31 @@ th {
 /* Custom style
 -------------------------------------------------*/
 
+/* Type
+*/
+
+@font-face {
+font-family: 'Roboto Condensed';
+src: local('Roboto Condensed'), url('../fonts/RobotoCondensed-Regular.ttf') format('truetype');
+}
+
+@font-face {
+font-family: 'Roboto Condensed Bold';
+src: local('Roboto Condensed Bold'), url('../fonts/RobotoCondensed-Bold.ttf') format('truetype');
+}
+
+#header h1 {
+    font-family: 'Roboto Condensed Bold';
+    font-size: 1em;
+    line-height: 1;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+/* Layout
+*/
+
+
 * {
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -249,7 +274,7 @@ html {
 }
 
 body {;
-    font: 100%/1 "DejaVu Sans", Arial, sans-serif;
+    font: 100%/1 'Roboto Condensed', 'DejaVu Sans', Arial, sans-serif;
     color: #3b322d;
     background-color: #d9c9ae;
 }
@@ -281,47 +306,76 @@ body {;
     width: 100%;
     height: 100%;   
 }
+
 .node {
-    border: solid 1px white;
-    line-height: 0.95;
+    display: block;
+    float: left;
     overflow: hidden;
     position: absolute;
+    clear: both;
     border-radius: 6px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    transition: background-color 0.5s ease;
 }
 
-.node div {
-    padding: 6px 4%;
+.node:hover,
+.node:focus {
+    cursor: pointer;
+    box-shadow: inset 0 0 8px rgba(0,0,0,0.4); 
 }
 
 .node span {
-    font-size: 0.875em;
-    line-height: 1;
-    display: inline-block;
+    position: absolute;
+    display: block;
+    float: left;
+    clear: both;
     width: 100%;
-    padding:  0.625em;
+    font-size: 0.875em;
+    line-height: 0.95;
+    padding:  0.425em;
+    top: 0.25em;
+    left: 0.25em;
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden;     
+    overflow: hidden; 
 }
 
 .subnode {
+    display: block;
+    float: left;
     position: relative;
-    left: 3px;
-    top: 3px;
+    bottom: 0.25em;
+    overflow: hidden;
+    border-radius: 3px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    transition: background-color 0.5s ease;
 }
 
-.subnode div {
-    padding: 6px 4%;
+.subnode:hover,
+.subnode:focus {
+    cursor: pointer;
+    box-shadow: inset 0 0 8px rgba(0,0,0,0.4); 
 }
 
 .subnode span {
+    display: block;
+    float: left;
+    width: auto;
     font-size: 0.875em;
     line-height: 1;
-    display: inline-block;
-    width: 100%;
-    padding:  0.625em;
+    padding:  0.25em;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;     
 }
+
+
+/* Tooltips
+*/
+
+.tooltip {
+    display:none;
+}
+
+
 
