--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -276,7 +276,7 @@ html {
 body {;
     font: 100%/1 'Roboto Condensed', 'DejaVu Sans', Arial, sans-serif;
     color: #3b322d;
-    background-color: #d9c9ae;
+    background-color: #fff; /*d9c9ae*/
 }
 
 #page {
@@ -324,7 +324,16 @@ body {;
     box-shadow: inset 0 0 8px rgba(0,0,0,0.4); 
 }
 
-.node span {
+.node-contents {
+    position: relative;
+    display: table;
+    width: 100%;
+    height: 100%;
+    padding: 0.25em;
+}
+
+.node span,
+.subnode span {
     position: absolute;
     display: block;
     float: left;
@@ -341,11 +350,11 @@ body {;
 }
 
 .subnode {
-    display: block;
-    float: left;
+    display: table-cell;
+    float: right;
     position: relative;
-    bottom: 0.25em;
-    overflow: hidden;
+    vertical-align: bottom;
+    bottom: 0;
     border-radius: 3px;
     box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
     transition: background-color 0.5s ease;
@@ -357,17 +366,7 @@ body {;
     box-shadow: inset 0 0 8px rgba(0,0,0,0.4); 
 }
 
-.subnode span {
-    display: block;
-    float: left;
-    width: auto;
-    font-size: 0.875em;
-    line-height: 1;
-    padding:  0.25em;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;     
-}
+
 
 
 /* Tooltips
