--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -232,21 +232,31 @@ src: local('Roboto Condensed'), url('../fonts/RobotoCondensed-Regular.ttf') form
 }
 
 @font-face {
+font-family: 'Roboto Condensed Light';
+src: local('Roboto Condensed Light'), url('../fonts/RobotoCondensed-Light.ttf') format('truetype');
+}
+
+@font-face {
 font-family: 'Roboto Condensed Bold';
 src: local('Roboto Condensed Bold'), url('../fonts/RobotoCondensed-Bold.ttf') format('truetype');
 }
 
 #header h1 {
-    font-family: 'Roboto Condensed Bold';
-    font-size: 1em;
+    font-family: 'Roboto Condensed Light';
+    font-size: 1.25em;
     line-height: 1;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
+#header h1 em {
+    font-family: 'Roboto Condensed Bold';
+    font-style: normal;
+    border-bottom: 2px solid #ccc;
+}
+
 /* Layout
 */
-
 
 * {
   -ms-box-sizing: border-box;
@@ -276,7 +286,8 @@ html {
 body {;
     font: 100%/1 'Roboto Condensed', 'DejaVu Sans', Arial, sans-serif;
     color: #3b322d;
-    background-color: #fff; /*d9c9ae*/
+    /* pattern by http://jorickvanhees.com */
+    background: #fff url(../media/rough_diagonal.png) repeat 0 0; /*d9c9ae*/
 }
 
 #page {
@@ -285,16 +296,10 @@ body {;
 }
 
 #main {
-    /* Testing responsive stuff */
     overflow: hidden;
     width: 100%;
     height: 100%;
     min-height: 60em;
-/*
-    width: 60%;
-    height: 100%;
-    min-height: 600px;
-*/
     position: relative;
 }
 
@@ -367,14 +372,16 @@ body {;
 }
 
 
-
-
-/* Tooltips
+/* Filters
 */
 
-.tooltip {
-    display:none;
-}
+::-webkit-input-placeholder { color: #666; }
+::-moz-placeholder { color: #666; }
+:-ms-input-placeholder { color: #666; }
+
+/* Modals
+*/
+
 
 
 
