--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -252,7 +252,6 @@ src: local('Roboto Condensed Bold'), url('../fonts/RobotoCondensed-Bold.ttf') fo
 #header h1 em {
     font-family: 'Roboto Condensed Bold';
     font-style: normal;
-    border-bottom: 2px solid #ccc;
 }
 
 /* Layout
@@ -369,9 +368,11 @@ body {;
 
 .subnode {
     display: inline-block;
+    overflow: hidden;
     position: relative;
     vertical-align: bottom;
     margin-left: 0.1em;
+    margin-top: 0.1em;
     border-radius: 3px;
     box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
     transition: background-color 0.5s ease;
@@ -394,6 +395,20 @@ body {;
 /* Modals
 */
 
+.reveal-modal .tags {
+    margin-left: 0;
+}
+
+.reveal-modal .tags li {
+    list-style-type: none;
+    display: inline-block;
+    font-size: 0.875em;
+    line-height: 1;
+    margin: 0.25em;
+    padding: 0.25em 0.45em;
+    background-color: #ddd;
+    border-radius: 3px;
+}
 
 
 
