--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -350,31 +350,48 @@ body {;
     height:100%;
     width:0;
     display: inline-block;
-}	
+}
 
-.node span,
-.subnode span {
+.node-details {
     text-align: left;
+    font-size: 0.875em;
+    line-height: 1;
     position: absolute;
     display: block;
-    float: left;
-    clear: both;
-    width: 100%;
-    font-size: 0.875em;
-    line-height: 0.95;
-    padding:  0.425em;
-    top: 0.25em;
-    left: 0.25em;
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden;
+    width: 90%;
+    top: 0.45em;
+    left: 0.45em;
+    margin: 0;
+}
+
+.node-details span {
+    display: block;
+    position: relative;
+    padding: 0.425em 0 0;
+}
+
+.node-amount {
+    font-family: 'Roboto Condensed Light';
+    font-size: 1.45em;
+}	
+
+.node-title {
 }
 
 .subnode {
+    text-align: left;
+    font-size: 0.875em;
+    line-height: 0.95;
     display: inline-block;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     position: relative;
     vertical-align: bottom;
+    padding: 0.425em;
     margin-left: 0.1em;
     margin-top: 0.1em;
     border-radius: 3px;
@@ -399,8 +416,23 @@ body {;
 /* Modals
 */
 
+.reveal-modal {    
+    border-radius: 5px;
+}
+
 .reveal-modal * {
     line-height: 1;
+}
+
+.reveal-modal .close-reveal-modal {
+    color: #ccc;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1;
+    position: absolute;
+    right: 1.375rem;
+    top: 0.625rem;
 }
 
 .reveal-modal .tags {
