Edited jquery-ui stylesheet: colours, borders and backgrounds for autocomplete.

--- a/demo1/css/jquery-ui-smoothness.css
+++ b/demo1/css/jquery-ui-smoothness.css
@@ -844,21 +844,23 @@ body .ui-tooltip {
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid #aaaaaa;
-	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
-	color: #222222;
+	border-bottom: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	background: #ffffff;
+	color: #666;
 }
 .ui-widget-content a {
-	color: #222222;
+	color: #666;
 }
 .ui-widget-header {
 	border: 1px solid #aaaaaa;
 	background: #cccccc url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") 50% 50% repeat-x;
-	color: #222222;
+	color: #666;
 	font-weight: bold;
 }
 .ui-widget-header a {
-	color: #222222;
+	color: #666;
 }
 
 /* Interaction states
@@ -866,8 +868,10 @@ body .ui-tooltip {
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
-	border: 1px solid #d3d3d3;
-	background: #e6e6e6 url("images/ui-bg_glass_75_e6e6e6_1x400.png") 50% 50% repeat-x;
+	border-bottom: 1px solid #999999;
+	border-left: 1px solid #999999;
+	border-right: 1px solid #999999;
+	background: #e6e6e6;
 	font-weight: normal;
 	color: #555555;
 }
@@ -883,8 +887,10 @@ body .ui-tooltip {
 .ui-state-focus,
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
-	border: 1px solid #999999;
-	background: #dadada url("images/ui-bg_glass_75_dadada_1x400.png") 50% 50% repeat-x;
+	border-bottom: 1px solid #999999;
+	border-left: 1px solid #999999;
+	border-right: 1px solid #999999;
+	background: #dadada;
 	font-weight: normal;
 	color: #212121;
 }
