--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -326,7 +326,7 @@ body {
     position: absolute;
     clear: both;
     border-radius: 5px;
-    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    /*box-shadow: inset 0 0 5px rgba(0,0,0,0.2);*/
     transition: background-color 0.5s ease;
 }
 
@@ -386,7 +386,7 @@ body {
 
 .subnode {
     text-align: left;
-    font-size: 0.875em;
+    font-size: 0.875rem;
     line-height: 0.95;
     display: inline-block;
     overflow: hidden;
@@ -394,18 +394,19 @@ body {
     white-space: nowrap;
     position: relative;
     vertical-align: bottom;
-    padding: 0.425em;
-    margin-left: 0.1em;
-    margin-top: 0.1em;
+    padding: 0.425rem;
+    border: 0.2rem solid rgba(255, 255, 255, 0.4);
+    margin-left: 0.1rem;
+    margin-top: 0.1rem;
     border-radius: 3px;
-    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-    transition: background-color 0.5s ease;
+    /*box-shadow: inset 0 0 5px rgba(0,0,0,0.2);*/
+    transition: border-color 0.5s ease;
 }
 
 .subnode:hover,
 .subnode:focus {
     cursor: pointer;
-    box-shadow: inset 0 0 8px rgba(0,0,0,0.4); 
+    border: 0.2rem solid #fff;
 }
 
 
