--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -346,7 +346,7 @@ body {
 .node-contents:after{
     content: "";
     height: 100%;
-    width: 100%;
+    width: 0;
     display: inline-block;
 }
 
