--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -326,8 +326,9 @@ body {
     position: absolute;
     clear: both;
     border-radius: 5px;
+    border: 2px solid transparent;
     /*box-shadow: inset 0 0 5px rgba(0,0,0,0.2);*/
-    transition: background-color 0.5s ease;
+    transition: border-color 0.5s ease;
 }
 
 .node-contents {
@@ -350,10 +351,11 @@ body {
     display: inline-block;
 }
 
-.node:hover .node-contents,
-.node:focus .node-contents {
+.node:hover,
+.node:focus {
     cursor: pointer;
-    box-shadow: inset 0 0 8px rgba(0,0,0,0.4); 
+    border: 2px solid rgba(0,0,0,0.2);
+/*    box-shadow: inset 0 0 8px rgba(0,0,0,0.4); */
 }
 
 .node-details {
@@ -398,7 +400,7 @@ body {
     position: relative;
     vertical-align: bottom;
     padding: 0.425rem;
-    border: 1px solid #fff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     margin-left: 0.1rem;
     margin-top: 0.1rem;
     border-radius: 3px;
@@ -409,7 +411,7 @@ body {
 .subnode:hover,
 .subnode:focus {
     cursor: pointer;
-    border: 1px solid rgba(255, 255, 255, 0.6);
+    border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 
