--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -247,7 +247,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header h1 {
     font-family: 'Roboto Condensed Light';
-    font-size: 1.25em;
+    font-size: 1.25rem;
     line-height: 1;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -300,6 +300,7 @@ body {
 #page {
     max-width: 50em; /*  1000px : 16 = 62.5em */
     margin: 40px auto;
+    heigh: 100%;
 }
 
 #main {
@@ -360,7 +361,7 @@ body {
 
 .node-details {
     text-align: left;
-    font-size: 0.875em;
+    font-size: 0.875rem;
     line-height: 1;
     position: absolute;
     display: block;
