--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -300,14 +300,18 @@ body {
 #page {
     max-width: 50em; /*  1000px : 16 = 62.5em */
     margin: 40px auto;
-    heigh: 100%;
 }
-
+/*
+#treemap-container {
+    height: 500px;
+}
+*/
 #main {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    min-height: 60em;
+    /*min-height: 60em;*/
+    height: 600px;
     position: relative;
 }
 
