--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -311,7 +311,7 @@ body {
     width: 100%;
     height: 100%;
     /*min-height: 60em;*/
-    height: 600px;
+    height: 1600px;
     position: relative;
 }
 
@@ -420,6 +420,11 @@ body {
 .subnode-details {
     font-size: 0.75rem;
     line-height: 0.95;
+    margin: 0;
+    position: absolute;
+    bottom: 0.2em;
+    right: 0.2em;
+    text-align: right;
 }
 
 .subnode-details span {
