--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -294,18 +294,16 @@ body {
     font: 100%/1 'Roboto Condensed', 'DejaVu Sans', Arial, sans-serif;
     color: #3b322d;
     /* pattern by http://jorickvanhees.com */
-    background: #fff url(../media/rough_diagonal.png) repeat 0 0; /*d9c9ae*/
+    background-color: transparent;
+    /*: #fff url(../media/rough_diagonal.png) repeat 0 0; /*d9c9ae*/
 }
 
 #page {
     max-width: 50em; /*  1000px : 16 = 62.5em */
     margin: 40px auto;
+    padding: 0 0.5em;
 }
-/*
-#treemap-container {
-    height: 500px;
-}
-*/
+
 #main {
     overflow: hidden;
     width: 100%;
@@ -332,7 +330,6 @@ body {
     clear: both;
     border-radius: 5px;
     border: 1px solid transparent;
-    /*box-shadow: inset 0 0 5px rgba(0,0,0,0.2);*/
     transition: border-color 0.5s ease;
 }
 
@@ -340,7 +337,6 @@ body {
 .node:focus {
     cursor: pointer;
     border: 1px solid rgba(0,0,0,0.3);
-/*    box-shadow: inset 0 0 8px rgba(0,0,0,0.4); */
 }
 
 .node-contents {
@@ -382,7 +378,7 @@ body {
 
 .node-amount {
     font-family: 'Roboto Condensed Bold';
-    font-size: 1.45rem;
+    font-size: 1.25rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -407,7 +403,6 @@ body {
     margin-left: 0.1rem;
     margin-top: 0.1rem;
     border-radius: 3px;
-    /*box-shadow: inset 0 0 5px rgba(0,0,0,0.2);*/
     transition: border-color 0.5s ease;
 }
 
@@ -423,8 +418,7 @@ body {
     margin: 0;
     position: absolute;
     bottom: 0.2em;
-    right: 0.2em;
-    text-align: right;
+    left: 0.2em;
 }
 
 .subnode-details span {
@@ -436,9 +430,7 @@ body {
     font-family: 'Roboto Condensed Bold';
     font-size: 0.875rem;
     margin-bottom: 2px;
-}	
-
-
+}
 
 
 /* Filters
