--- a/app/css/style.css
+++ b/app/css/style.css
@@ -338,7 +338,7 @@ body {
 }
 
 
-.node:nth-child(5) { /* background gradient for deportations */
+.deportations { /* background gradient for deportations */
     background: #e1e3a7 !important; /* Old browsers */
     background: -moz-linear-gradient(top, #e1e3a7 0%, #8f9154 100%) !important; /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e1e3a7), color-stop(100%,#8f9154)) !important; /* Chrome,Safari4+ */
