Added modal for credits with dummy text. Debugging pym.js...

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -498,7 +498,7 @@ body {
 .reveal-modal h2,
 .reveal-modal h3,
 .reveal-modal h4 {
-    line-height: 1;
+    margin-bottom: 0;
 }
 
 .reveal-modal .close-reveal-modal {
