--- a/app/css/style.css
+++ b/app/css/style.css
@@ -467,6 +467,7 @@ body {
 /* Modals
 */
 
+/*
 .reveal-modal {    
     border-radius: 5px;
     padding-top: 1.875rem;
@@ -512,7 +513,7 @@ body {
     display: block;
     padding: 0 0.25em;
 }
-
+*/
 /* Tags were removed
 .reveal-modal .tags {
     margin-left: 0;
